--- a/lego/aa148.html
+++ b/lego/aa148.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWPLPJ3ZCL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-RWPLPJ3ZCL');
+    </script>
+    <title>aa148 - Calvez L., 2017</title>
+  </head>    
   <body>
     <h1>The Hidden Lives of Owls, Calvez L., 2017</h1>
 
@@ -9,17 +20,19 @@
 
     <p>The owl resources at the end of the book is useful.</p>
 
-    <ul>Owl resources, copied:
-      <li>All About Birds: Cornell Lab of Ornithology, AllAboutBirds.org</li>
-      <li>Ebird: Audubon/Cornell, eBird.org</li>
-      <li>Explore: remote cameras, Explore.org</li>
-      <li>Global Owl Project (GLOW): since 2002, GlobalOwlProject.com</li>
-      <li>Growiser: Grande Ronde Overlook Wildflower Institute Serving Ecological Restoration, Growiser.net</li>
-      <li>Hawkwatch International (HWI): since 1986, conservation, HawkWatch.org</li>
-      <li>Owl Research Institute (ORI): Denver Holt, Steve Hiro, OwlInstitute.org</li>
-      <li>Project Snowstorm: GPS-GMS transmitters, Snowy Owls, ProjectSnowstorm.org</li>
-      <li>The Owl Pages: descriptions, etc., OwlPages.com</li>
-    </ul>
+    <p>Owl resources, copied:
+      <ul>
+	<li>All About Birds: Cornell Lab of Ornithology, <a href="AllAboutBirds.org">AllAboutBirds.org</a></li>
+	<li>Ebird: Audubon/Cornell, <a href="eBird.org">eBird.org</a></li>
+	<li>Explore: remote cameras, <a href="Explore.org">Explore.org</a></li>
+	<li>Global Owl Project (GLOW): since 2002, <a href="GlobalOwlProject.com">GlobalOwlProject.com</a></li>
+	<li>Growiser: Grande Ronde Overlook Wildflower Institute Serving Ecological Restoration, <a href="Growiser.net">Growiser.net</a></li>
+	<li>Hawkwatch International (HWI): since 1986, conservation, <a href="HawkWatch.org">HawkWatch.org</a></li>
+	<li>Owl Research Institute (ORI): Denver Holt, Steve Hiro, <a href="OwlInstitute.org">OwlInstitute.org</a></li>
+	<li>Project Snowstorm: GPS-GMS transmitters, Snowy Owls, <a href="ProjectSnowstorm.org">ProjectSnowstorm.org</a></li>
+	<li>The Owl Pages: descriptions, etc., <a href="OwlPages.com">OwlPages.com</a></li>
+      </ul>
+    </p>
 
   </body>
 </html>
