--- a/lego/aa148.html
+++ b/lego/aa148.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWPLPJ3ZCL"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-RWPLPJ3ZCL');
-    </script>
-    <title>aa148 - Calvez L., 2017</title>
-  </head>    
-  <body>
+    <html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>aa148</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 40px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        p {
+            margin-bottom: 1em;
+        }
+        h1 {
+            font-size: 1.8em;
+            margin-bottom: 1em;
+        }
+    </style>
+    </head>
+    <body>
     <h1>The Hidden Lives of Owls, Calvez L., 2017</h1>
-
-    <p>Calvez drifts somewhere between author and subject, but authority less often--this book is equally self-reflection and a delving into the world of owls.</p>
-
-    <p>Calvez also spends a lot of time putting herself in the shoes of owls, seeming to confuse her experience as a human and a mother with that of an owl. Ackerman (What an Owl Knows) doesn't make this mistake and instead drives the point home that we cannot and should not delude ourselves into thinking that we can develop a relationship with an owl, cohabitate, or relate to them, a point that many ornithologists go out of their way to observe out of respect to the animal (minimizing direct eye contact, not approaching an owl directly, all otherwise predatory behaviors). Saw-whet owls and other similar species were once thought docile and accepting of human contact. Their behavior is better understood as defensive though, melding into the background and almost perfectly still so as not to attract attention. Perhaps romantically, Calvez seems to linger under the delusion that her words might have an effect on the birds, that a mystical connection exists, perhaps.</p>
-
-    <p>The owl resources at the end of the book is useful.</p>
-
-    <p>Owl resources, copied:
-      <ul>
-	<li>All About Birds: Cornell Lab of Ornithology, <a href="AllAboutBirds.org">AllAboutBirds.org</a></li>
-	<li>Ebird: Audubon/Cornell, <a href="eBird.org">eBird.org</a></li>
-	<li>Explore: remote cameras, <a href="Explore.org">Explore.org</a></li>
-	<li>Global Owl Project (GLOW): since 2002, <a href="GlobalOwlProject.com">GlobalOwlProject.com</a></li>
-	<li>Growiser: Grande Ronde Overlook Wildflower Institute Serving Ecological Restoration, <a href="Growiser.net">Growiser.net</a></li>
-	<li>Hawkwatch International (HWI): since 1986, conservation, <a href="HawkWatch.org">HawkWatch.org</a></li>
-	<li>Owl Research Institute (ORI): Denver Holt, Steve Hiro, <a href="OwlInstitute.org">OwlInstitute.org</a></li>
-	<li>Project Snowstorm: GPS-GMS transmitters, Snowy Owls, <a href="ProjectSnowstorm.org">ProjectSnowstorm.org</a></li>
-	<li>The Owl Pages: descriptions, etc., <a href="OwlPages.com">OwlPages.com</a></li>
-      </ul>
-    </p>
-
-  </body>
-</html>
+<br>
+<p>Calvez drifts somewhere between author and subject, but authority less often--this book is more self-reflection than a window into the owls&#x27; world.</p>
+<br>
+<p>Calvez seems to confuse her experience as a human and mother with that of the owl&#x27;s. Ackerman (What an Owl Knows) doesn&#x27;t muddle this, instead driving the point that we cannot (and should not) delude ourselves into thinking that we can develop relationships with owls, shouldn&#x27;t cohabitate, and cannot directly relate to them, a point that many ornithologists go out of their way to observe out of respect to the animal (e.g. minimizing direct eye contact, not approaching an owl directly, all otherwise predatory behaviors). Saw-whet owls and other similar species were once thought docile and accepting of human contact. Their behavior is better understood as defensive, melding into the background and almost perfectly still so as not to attract attention. Perhaps romantically, Calvez seems to linger under the error that her words might have an effect on the birds, that a mystical connection exists.</p>
+<br>
+<p>The owl resources at the end of the book is useful.</p>
+<br>
+<br>
+<p>Owl resources, copied:</p>
+<p>- All About Birds: Cornell Lab of Ornithology, AllAboutBirds.org</p>
+<p>- Ebird: Audubon/Cornell, eBird.org</p>
+<p>- Explore: remote cameras, Explore.org</p>
+<p>- Global Owl Project (GLOW): since 2002, GlobalOwlProject.com</p>
+<p>- Growiser: Grande Ronde Overlook Wildflower Institute Serving Ecological Restoration, Growiser.net</p>
+<p>- Hawkwatch International (HWI): since 1986, conservation, HawkWatch.org</p>
+<p>- Owl Research Institute (ORI): Denver Holt, Steve Hiro, OwlInstitute.org</p>
+<p>- Project Snowstorm: GPS-GMS transmitters, Snowy Owls, ProjectSnowstorm.org</p>
+<p>- The Owl Pages: descriptions, etc., OwlPages.com</p>
+</body>
+    </html>
