--- a/lego/read.html
+++ b/lego/read.html
@@ -319,7 +319,7 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td>aa149</td>
+      <td><a href="https://jd2504.github.io/lego/aa149.txt">aa149</a></td>
       <td>When Einstein Walked with Gödel</td>
       <td>Jim Holt</td>
       <td>2018</td>
@@ -335,7 +335,7 @@
       <td>zoology ecology owls</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa147.txt">aa147</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa147.html">aa147</a></td>
       <td>Journey to the Edge of Reason: The Life of Kurt Gödel</td>
       <td>Stephen Budiansky</td>
       <td>2021</td>
