aa148 with carr & konishi ITD paper

--- a/lego/aa148.html
+++ b/lego/aa148.html
@@ -24,13 +24,10 @@
     </head>
     <body>
     <h1>The Hidden Lives of Owls, Calvez L., 2017</h1>
-<br>
 <p>Calvez drifts somewhere between author and subject, but authority less often--this book is more self-reflection than a window into the owls&#x27; world.</p>
-<br>
 <p>Calvez seems to confuse her experience as a human and mother with that of the owl&#x27;s. Ackerman (What an Owl Knows) doesn&#x27;t muddle this, instead driving the point that we cannot (and should not) delude ourselves into thinking that we can develop relationships with owls, shouldn&#x27;t cohabitate, and cannot directly relate to them, a point that many ornithologists go out of their way to observe out of respect to the animal (e.g. minimizing direct eye contact, not approaching an owl directly, all otherwise predatory behaviors). Saw-whet owls and other similar species were once thought docile and accepting of human contact. Their behavior is better understood as defensive, melding into the background and almost perfectly still so as not to attract attention. Perhaps romantically, Calvez seems to linger under the error that her words might have an effect on the birds, that a mystical connection exists.</p>
-<br>
 <p>The owl resources at the end of the book is useful.</p>
-<br>
+<p>Also happened to read paper on interaural time differences and dorsal-ventral pathways to nucleus magnocellularis (Carr &amp; Konishi, 1990) and surprised there was no mention of asymetrical ear canal placement. Magnocellular axons act as delay lines, projecting bilaterally to nucleus laminaris (ipsilateral: enter dorsally ; contralateral: enter ventrally).Conduction time of potentials along axons varies systematically with depth within NL. Creates range of delays that matches range of ITDs the owl might experience--turns axons into a physical representation of different possible ITDs. Slow conduction velocity in axons, potentially regulated by short internodes, contributes to delay line function. What happens if delays are extreme? Mislocalization of prey?</p>
 <br>
 <p>Owl resources, copied:</p>
 <p>- All About Birds: Cornell Lab of Ornithology, AllAboutBirds.org</p>
