--- a/lego/read.html
+++ b/lego/read.html
@@ -319,7 +319,7 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa149.txt">aa149</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa149.html">aa149</a></td>
       <td>When Einstein Walked with Gödel</td>
       <td>Jim Holt</td>
       <td>2018</td>
