--- a/lego/aa147.html
+++ b/lego/aa147.html
@@ -1,36 +1,33 @@
-cat > "lego/aa147.html" << HTML_HEADER
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWPLPJ3ZCL"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-RWPLPJ3ZCL');
-    </script>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>lego/aa147</title>
- <style>
-     body {
-         font-family: Arial, sans-serif;
-         line-height: 1.6;
-         margin: 40px;
-     }
-     p {
-         margin-bottom: 1em;
-     }
- </style>
-</head>
-<body>
-<p>Journey to the Edge of Reason: The Life of Kurt Gödel, Budiansky, 2021</p>
-<br>
-<p>I learned about as much about turn of the century Vienna, the Vienna Circle, and Nazi-occupied Austria as I did about Gödel&#39;s ideas. This was very much a &#39;life of&#39;. But otherwise, well written enough. Came across another book about Moritz Schlick&#39;s murder that I may check out.</p>
-<br>
+    <html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>aa147</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 40px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        p {
+            margin-bottom: 1em;
+        }
+        h1 {
+            font-size: 1.8em;
+            margin-bottom: 1em;
+        }
+    </style>
+    </head>
+    <body>
+    <h1>Journey to the Edge of Reason: The Life of Kurt Gödel, Budiansky, 2021</h1>
+<p>I learned about as much about turn of the century Vienna, the Vienna Circle, and Nazi-occupied Austria as I did about Gödel&#x27;s ideas. This was very much a &#x27;life of&#x27;. But otherwise, well written enough. Came across another book about Moritz Schlick&#x27;s murder that I may check out.</p>
 <p>Further reading:</p>
 <p>The Murder of Professor Schlick: The Rise and Fall of the Vienna Circle, Edmonds D., 2020</p>
 <p>Incompleteness: The Proof and Paradox of Kurt Gödel, Goldstein R., 2005</p>
 <p>Logicomix, Christos Papadimitriou, 2008 (read a long time ago, remember enjoying, and worth finding again)</p>
 </body>
-</html>
+    </html>
