--- a/lego/aa111.html
+++ b/lego/aa111.html
@@ -31,11 +31,11 @@
     </style>
     </head>
     <body>
-    <h1>Journey to the Edge of Reason: The Life of Kurt Gödel, Budiansky, 2021</h1>
-<p>I learned about as much about turn of the century Vienna, the Vienna Circle, and Nazi-occupied Austria as I did about Gödel&#x27;s ideas. This was very much a &#x27;life of&#x27;. But otherwise, well written enough. Came across another book about Moritz Schlick&#x27;s murder that I may check out.</p>
-<p>Further reading:</p>
-<p>The Murder of Professor Schlick: The Rise and Fall of the Vienna Circle, Edmonds D., 2020</p>
-<p>Incompleteness: The Proof and Paradox of Kurt Gödel, Goldstein R., 2005</p>
-<p>Logicomix, Christos Papadimitriou, 2008 (read a long time ago, remember enjoying, and worth finding again)</p>
+    <h1>Kitchen Confidential: Adventures in the Culinary Underbelly, Anthony Bourdain (2000)</h1>
+<p>J.D., 2024-05-18</p>
+<p>Standard run hard crew</p>
+<p>Kitchen lingo</p>
+<p>Ellie at Bann... gay Ecuadorian dictator, Mrs. Kim&#x27;s deputy</p>
+<p>Ray and Jin, whoever the white guy was that asked one of the bussers if he could suck his dick</p>
 </body>
     </html>
