--- a/lego/aa119.html
+++ b/lego/aa119.html
@@ -31,11 +31,9 @@
     </style>
     </head>
     <body>
-    <h1>Journey to the Edge of Reason: The Life of Kurt Gödel, Budiansky, 2021</h1>
-<p>I learned about as much about turn of the century Vienna, the Vienna Circle, and Nazi-occupied Austria as I did about Gödel&#x27;s ideas. This was very much a &#x27;life of&#x27;. But otherwise, well written enough. Came across another book about Moritz Schlick&#x27;s murder that I may check out.</p>
-<p>Further reading:</p>
-<p>The Murder of Professor Schlick: The Rise and Fall of the Vienna Circle, Edmonds D., 2020</p>
-<p>Incompleteness: The Proof and Paradox of Kurt Gödel, Goldstein R., 2005</p>
-<p>Logicomix, Christos Papadimitriou, 2008 (read a long time ago, remember enjoying, and worth finding again)</p>
+    <h1>Illiberal America, Steven Hahn (2024)</h1>
+<p>Before opening the book, the title should already seem a surprising start.</p>
+<p>Hahn argues that illiberalism is not a marginal undercurrent of American politics and society, but a prominent set of views located at the center. He walks through a series of historical episodes that show illiberal thought has always been beneath the surface, from racist politics of White nationalists and their predecessors, anti-Mormon and anti-Catholic fears, and other Thems.</p>
+<p>He misses that the tides have consistently been moving in the direction of a broader and more concrete conception of liberty, a more inclusive view of rights, and increasing economic opportunity for all classes of American society.</p>
 </body>
     </html>
