--- a/lego/aa116.html
+++ b/lego/aa116.html
@@ -31,11 +31,7 @@
     </style>
     </head>
     <body>
-    <h1>Journey to the Edge of Reason: The Life of Kurt Gödel, Budiansky, 2021</h1>
-<p>I learned about as much about turn of the century Vienna, the Vienna Circle, and Nazi-occupied Austria as I did about Gödel&#x27;s ideas. This was very much a &#x27;life of&#x27;. But otherwise, well written enough. Came across another book about Moritz Schlick&#x27;s murder that I may check out.</p>
-<p>Further reading:</p>
-<p>The Murder of Professor Schlick: The Rise and Fall of the Vienna Circle, Edmonds D., 2020</p>
-<p>Incompleteness: The Proof and Paradox of Kurt Gödel, Goldstein R., 2005</p>
-<p>Logicomix, Christos Papadimitriou, 2008 (read a long time ago, remember enjoying, and worth finding again)</p>
+    <h1>Invisible Women: Data Bias in a World Designed for Men, Caroline Criado-Perez, 2019</h1>
+<p>Criado-Perez dedicates a book to spelling out the many ways in which women have been left out of consideration in health issues and medicine, education, product design, policy, and virtually any other area of individual interest you might imagine. For anyone interested in building a world that works for everyone, any chapter of this book could be a possible candidate for a place to start. For example, she points out a few ways in which first phase testing in medicine have historically only used men, or a negligible number of women in tests, leading to results that show results that do not adequately represent effects on women.</p>
 </body>
     </html>
