--- a/lego/aa148.html
+++ b/lego/aa148.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RWPLPJ3ZCL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-RWPLPJ3ZCL');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>aa148</title>
+
     <style>
-        body {
+        body {{
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 40px;
             max-width: 800px;
             margin-left: auto;
             margin-right: auto;
-        }
-        p {
+        }}
+        p {{
             margin-bottom: 1em;
-        }
-        h1 {
+        }}
+        h1 {{
             font-size: 1.8em;
             margin-bottom: 1em;
-        }
+        }}
     </style>
     </head>
     <body>
