--- a/lego/read.html
+++ b/lego/read.html
@@ -343,7 +343,7 @@
       <td>godel history mathematics</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa145.txt">aa145</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa145.html">aa145</a></td>
       <td>What an Owl Knows</td>
       <td>Jennifer Ackerman</td>
       <td>2023</td>
@@ -351,7 +351,7 @@
       <td>zoology ecology owls</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa142.txt">aa142</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa142.html">aa142</a></td>
       <td>Time Travel: A History</td>
       <td>James Gleick</td>
       <td>2016</td>
@@ -359,7 +359,7 @@
       <td>time</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa140.txt">aa140</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa140.html">aa140</a></td>
       <td>Pale Fire</td>
       <td>Vladimir Nabokov</td>
       <td>1962</td>
@@ -367,7 +367,7 @@
       <td>fiction</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa141.txt">aa141</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa141.html">aa141</a></td>
       <td>Our Mathematical Universe</td>
       <td>Max Tegmark</td>
       <td>2014</td>
@@ -511,7 +511,7 @@
       <td>memoir autobiography faith atheism death</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa119.txt">aa119</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa119.html">aa119</a></td>
       <td>Illiberal America: A History</td>
       <td>Steven Hahn</td>
       <td>2024</td>
@@ -527,7 +527,7 @@
       <td>fiction christianity apostacy roman</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa116.txt">aa116</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa116.html">aa116</a></td>
       <td>Invisible Women: Data Bias in a World Designed for Men</td>
       <td>Caroline Criado-Perez</td>
       <td>2019</td>
@@ -567,7 +567,7 @@
       <td>astrophysics cosmology</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa111.txt">aa111</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa111.html">aa111</a></td>
       <td>Kitchen Confidential: Adventures in the Culinary Underbelly</td>
       <td>Anthony Bourdain</td>
       <td>2000</td>
@@ -599,7 +599,7 @@
       <td>music bach baroque biography</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa098.txt">aa098</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa098.html">aa098</a></td>
       <td>A Thousand Brains: A New Theory of Intelligence</td>
       <td>Jeff Hawkins</td>
       <td>2021</td>
@@ -647,7 +647,7 @@
       <td>fiction comic</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa094.txt">aa094</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa094.html">aa094</a></td>
       <td>Not In Our Genes</td>
       <td>Richard C. Lewontin, Steven Rose, Leon J. Kamin</td>
       <td>1984</td>
