--- a/lego/read.html
+++ b/lego/read.html
@@ -319,6 +319,14 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
+      <td><a href="https://jd2504.github.io/lego/aa150.txt">aa150</a></td>
+      <td>How Innovation Works</td>
+      <td>Matt Ridley</td>
+      <td>2020</td>
+      <td>2025-99-99</td>
+      <td>innovation freedom</td>
+    </tr>
+    <tr>
       <td><a href="https://jd2504.github.io/lego/aa149.html">aa149</a></td>
       <td>When Einstein Walked with Gödel</td>
       <td>Jim Holt</td>
