--- a/lego/read.html
+++ b/lego/read.html
@@ -319,7 +319,7 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa150.txt">aa150</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa150.html">aa150</a></td>
       <td>How Innovation Works</td>
       <td>Matt Ridley</td>
       <td>2020</td>
