--- a/lego/read.html
+++ b/lego/read.html
@@ -319,11 +319,19 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
+      <td>aa151</td>
+      <td>The Coming Wave: Technology, Power, and the Twenty-first Century's Greatest Dilemma</td>
+      <td>Mustafa Suleyman</td>
+      <td>2023</td>
+      <td>2025-99-99</td>
+      <td>artificial intelligence</td>
+    </tr>
+    <tr>
       <td><a href="https://jd2504.github.io/lego/aa150.html">aa150</a></td>
       <td>How Innovation Works</td>
       <td>Matt Ridley</td>
       <td>2020</td>
-      <td>2025-99-99</td>
+      <td>2025-02-17</td>
       <td>innovation freedom</td>
     </tr>
     <tr>
