--- a/lego/read.html
+++ b/lego/read.html
@@ -215,20 +215,12 @@
       <td>determinism neuroscience free will philosophy biology</td>
     </tr>
     <tr>
-      <td>aa097</td>
-      <td>The Conscious Mind</td>
-      <td>David J. Chalmers</td>
-      <td>1997</td>
+      <td>aa105</td>
+      <td>Lessons</td>
+      <td>Ian McEwan</td>
+      <td>2022</td>
       <td>2099-99-99</td>
-      <td>consciousness philosophy</td>
-    </tr>
-    <tr>
-      <td>aa144</td>
-      <td>Orbital</td>
-      <td>Samantha Harvey</td>
-      <td>2024</td>
-      <td>2099-99-99</td>
-      <td>space fiction sci-fi science fiction</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td>aa120</td>
@@ -239,20 +231,20 @@
       <td>consciousness neuroscience</td>
     </tr>
     <tr>
+      <td>aa097</td>
+      <td>The Conscious Mind</td>
+      <td>David J. Chalmers</td>
+      <td>1997</td>
+      <td>2099-99-99</td>
+      <td>consciousness philosophy</td>
+    </tr>
+    <tr>
       <td>aa137</td>
       <td>The Mind Doesn't Work That Way: The Scope and Limits of Computational Psychology</td>
       <td>Jerry A. Fodor</td>
       <td>2001</td>
       <td>2099-99-99</td>
       <td>philosophy mind computational neuroscience psychology</td>
-    </tr>
-    <tr>
-      <td>aa105</td>
-      <td>Lessons</td>
-      <td>Ian McEwan</td>
-      <td>2022</td>
-      <td>2099-99-99</td>
-      <td>fiction</td>
     </tr>
     <tr>
       <td>aa099</td>
@@ -319,7 +311,15 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td>aa151</td>
+      <td>aa144</td>
+      <td>Orbital</td>
+      <td>Samantha Harvey</td>
+      <td>2024</td>
+      <td>2025-99-99</td>
+      <td>space fiction sci-fi science fiction</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa151.txt">aa151</a></td>
       <td>The Coming Wave: Technology, Power, and the Twenty-first Century's Greatest Dilemma</td>
       <td>Mustafa Suleyman</td>
       <td>2023</td>
