--- a/lego/read.html
+++ b/lego/read.html
@@ -311,7 +311,7 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td>aa144</td>
+      <td><a href="https://jd2504.github.io/lego/aa144.txt">aa144</a></td>
       <td>Orbital</td>
       <td>Samantha Harvey</td>
       <td>2024</td>
@@ -323,8 +323,8 @@
       <td>The Coming Wave: Technology, Power, and the Twenty-first Century's Greatest Dilemma</td>
       <td>Mustafa Suleyman</td>
       <td>2023</td>
-      <td>2025-99-99</td>
-      <td>artificial intelligence</td>
+      <td>2025-02-25</td>
+      <td>artificial intelligence containment regulation</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa150.html">aa150</a></td>
