--- a/lego/read_queue.html
+++ b/lego/read_queue.html
@@ -11,34 +11,55 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>Demon Copperhead</td>
+      <td>2022</td>
+      <td>Barbara Kingsolver</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>1</th>
+      <td>The Tyranny of Merit</td>
+      <td>2020</td>
+      <td>Michael J. Sandel</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td>Ours Was the Shining Future</td>
+      <td>2024</td>
+      <td>David Leonhardt</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td>Jesus Wept</td>
+      <td>2025</td>
+      <td>Philip Shenon</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>4</th>
       <td>Reality+: Virtual Worlds and the Problems of Philosophy</td>
       <td>2022</td>
       <td>David J. Chalmers</td>
       <td>hardcover</td>
     </tr>
     <tr>
-      <th>1</th>
-      <td>In Search of Memory: The Emergence of a New Science of Mind</td>
-      <td>2007</td>
-      <td>Eric R. Kandel</td>
-      <td>paperback</td>
-    </tr>
-    <tr>
-      <th>2</th>
+      <th>5</th>
       <td>Benjamin Franklin: An American Life</td>
       <td>2004</td>
       <td>Walter Isaacson</td>
       <td>hardcover</td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>6</th>
       <td>Thomas Jefferson: The Art of Power</td>
       <td>2013</td>
       <td>Jon Meacham</td>
       <td>hardcover</td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>7</th>
       <td>DNA: The Secret of Life</td>
       <td>2003</td>
       <td>James D. Watson</td>
