--- a/lego/read.html
+++ b/lego/read.html
@@ -319,7 +319,7 @@
       <td>space fiction sci-fi science fiction</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa151.txt">aa151</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa151.html">aa151</a></td>
       <td>The Coming Wave: Technology, Power, and the Twenty-first Century's Greatest Dilemma</td>
       <td>Mustafa Suleyman</td>
       <td>2023</td>
