--- a/lego/read.html
+++ b/lego/read.html
@@ -215,36 +215,12 @@
       <td>determinism neuroscience free will philosophy biology</td>
     </tr>
     <tr>
-      <td>aa105</td>
-      <td>Lessons</td>
-      <td>Ian McEwan</td>
-      <td>2022</td>
+      <td>aa101</td>
+      <td>God: The Most Unpleasant Character in All Fiction</td>
+      <td>Dan Barker</td>
+      <td>2016</td>
       <td>2099-99-99</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
-      <td>aa120</td>
-      <td>Being You: A New Science of Consciousness</td>
-      <td>Anil Seth</td>
-      <td>2021</td>
-      <td>2099-99-99</td>
-      <td>consciousness neuroscience</td>
-    </tr>
-    <tr>
-      <td>aa097</td>
-      <td>The Conscious Mind</td>
-      <td>David J. Chalmers</td>
-      <td>1997</td>
-      <td>2099-99-99</td>
-      <td>consciousness philosophy</td>
-    </tr>
-    <tr>
-      <td>aa137</td>
-      <td>The Mind Doesn't Work That Way: The Scope and Limits of Computational Psychology</td>
-      <td>Jerry A. Fodor</td>
-      <td>2001</td>
-      <td>2099-99-99</td>
-      <td>philosophy mind computational neuroscience psychology</td>
+      <td>christianity religion bible</td>
     </tr>
     <tr>
       <td>aa099</td>
@@ -255,12 +231,36 @@
       <td>philosophy</td>
     </tr>
     <tr>
-      <td>aa101</td>
-      <td>God: The Most Unpleasant Character in All Fiction</td>
-      <td>Dan Barker</td>
-      <td>2016</td>
+      <td>aa105</td>
+      <td>Lessons</td>
+      <td>Ian McEwan</td>
+      <td>2022</td>
       <td>2099-99-99</td>
-      <td>christianity religion bible</td>
+      <td>fiction</td>
+    </tr>
+    <tr>
+      <td>aa097</td>
+      <td>The Conscious Mind</td>
+      <td>David J. Chalmers</td>
+      <td>1997</td>
+      <td>2099-99-99</td>
+      <td>consciousness philosophy</td>
+    </tr>
+    <tr>
+      <td>aa120</td>
+      <td>Being You: A New Science of Consciousness</td>
+      <td>Anil Seth</td>
+      <td>2021</td>
+      <td>2099-99-99</td>
+      <td>consciousness neuroscience</td>
+    </tr>
+    <tr>
+      <td>aa137</td>
+      <td>The Mind Doesn't Work That Way: The Scope and Limits of Computational Psychology</td>
+      <td>Jerry A. Fodor</td>
+      <td>2001</td>
+      <td>2099-99-99</td>
+      <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
       <td>aa129</td>
@@ -317,6 +317,14 @@
       <td>2024</td>
       <td>2025-99-99</td>
       <td>space fiction sci-fi science fiction</td>
+    </tr>
+    <tr>
+      <td>aa153</td>
+      <td>War</td>
+      <td>Bob Woodward</td>
+      <td>2024</td>
+      <td>2025-99-99</td>
+      <td>politics trump biden ukraine israel</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa151.html">aa151</a></td>
@@ -645,6 +653,14 @@
       <td>2012</td>
       <td>2024-03-07</td>
       <td>neuroscience psychology</td>
+    </tr>
+    <tr>
+      <td>aa152</td>
+      <td>Prisoner's Dilemma</td>
+      <td>William Poundstone</td>
+      <td>2023</td>
+      <td>2024-03-04</td>
+      <td>game theory philosophy ethics applied mathematics von neumann</td>
     </tr>
     <tr>
       <td>aa095</td>
