--- a/lego/read.html
+++ b/lego/read.html
@@ -311,12 +311,20 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa144.txt">aa144</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa144.html">aa144</a></td>
       <td>Orbital</td>
       <td>Samantha Harvey</td>
       <td>2024</td>
       <td>2025-99-99</td>
       <td>space fiction sci-fi science fiction</td>
+    </tr>
+    <tr>
+      <td>aa154</td>
+      <td>Stone Blind</td>
+      <td>Natalie Haynes</td>
+      <td>2023</td>
+      <td>2025-99-99</td>
+      <td>medusa greek mythology retelling</td>
     </tr>
     <tr>
       <td>aa153</td>
@@ -327,10 +335,10 @@
       <td>politics trump biden ukraine israel</td>
     </tr>
     <tr>
-      <td>aa152</td>
+      <td><a href="https://jd2504.github.io/lego/aa152.html">aa152</a></td>
       <td>Prisoner's Dilemma</td>
       <td>William Poundstone</td>
-      <td>2023</td>
+      <td>1993</td>
       <td>2025-03-04</td>
       <td>game theory philosophy ethics applied mathematics von neumann</td>
     </tr>
@@ -346,7 +354,7 @@
       <td><a href="https://jd2504.github.io/lego/aa150.html">aa150</a></td>
       <td>How Innovation Works</td>
       <td>Matt Ridley</td>
-      <td>2020</td>
+      <td>2021</td>
       <td>2025-02-17</td>
       <td>innovation freedom</td>
     </tr>
@@ -1063,20 +1071,20 @@
       <td>artificial intelligence agi</td>
     </tr>
     <tr>
-      <td>aa046</td>
-      <td>Pnin</td>
-      <td>Vladimir Nabokov</td>
-      <td>1957</td>
-      <td>2022-08-14</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
       <td>aa045</td>
       <td>The Rational Optimist</td>
       <td>Matt Ridley</td>
       <td>2010</td>
       <td>2022-08-14</td>
       <td>reason economics</td>
+    </tr>
+    <tr>
+      <td>aa046</td>
+      <td>Pnin</td>
+      <td>Vladimir Nabokov</td>
+      <td>1957</td>
+      <td>2022-08-14</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td>aa044</td>
