--- a/lego/read.html
+++ b/lego/read.html
@@ -311,6 +311,14 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
+      <td>aa153</td>
+      <td>War</td>
+      <td>Bob Woodward</td>
+      <td>2024</td>
+      <td>2025-99-99</td>
+      <td>politics trump biden ukraine israel</td>
+    </tr>
+    <tr>
       <td><a href="https://jd2504.github.io/lego/aa144.html">aa144</a></td>
       <td>Orbital</td>
       <td>Samantha Harvey</td>
@@ -319,20 +327,12 @@
       <td>space fiction sci-fi science fiction</td>
     </tr>
     <tr>
-      <td>aa154</td>
+      <td><a href="https://jd2504.github.io/lego/aa154.txt">aa154</a></td>
       <td>Stone Blind</td>
       <td>Natalie Haynes</td>
       <td>2023</td>
-      <td>2025-99-99</td>
+      <td>2025-03-08</td>
       <td>medusa greek mythology retelling</td>
-    </tr>
-    <tr>
-      <td>aa153</td>
-      <td>War</td>
-      <td>Bob Woodward</td>
-      <td>2024</td>
-      <td>2025-99-99</td>
-      <td>politics trump biden ukraine israel</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa152.html">aa152</a></td>
