--- a/lego/read.html
+++ b/lego/read.html
@@ -327,7 +327,7 @@
       <td>space fiction sci-fi science fiction</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa154.txt">aa154</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa154.html">aa154</a></td>
       <td>Stone Blind</td>
       <td>Natalie Haynes</td>
       <td>2023</td>
