--- a/lego/read.html
+++ b/lego/read.html
@@ -311,12 +311,12 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td>aa153</td>
+      <td><a href="https://jd2504.github.io/lego/aa153.txt">aa153</a></td>
       <td>War</td>
       <td>Bob Woodward</td>
       <td>2024</td>
-      <td>2025-99-99</td>
-      <td>politics trump biden ukraine israel</td>
+      <td>2025-03-11</td>
+      <td>biden trump politics ukraine israel</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa144.html">aa144</a></td>
@@ -444,7 +444,7 @@
       <td>Eric R. Kandel</td>
       <td>2012</td>
       <td>2024-12-03</td>
-      <td>art modernism expressionism schiele kokoschka klimt symbolism neuroscience brain unconscious</td>
+      <td>art modernism expressionism neuroscience brain unconscious</td>
     </tr>
     <tr>
       <td>aa133</td>
