--- a/lego/read.html
+++ b/lego/read.html
@@ -215,20 +215,28 @@
       <td>determinism neuroscience free will philosophy biology</td>
     </tr>
     <tr>
+      <td>aa101</td>
+      <td>God: The Most Unpleasant Character in All Fiction</td>
+      <td>Dan Barker</td>
+      <td>2016</td>
+      <td>2099-99-99</td>
+      <td>christianity religion bible</td>
+    </tr>
+    <tr>
+      <td>aa099</td>
+      <td>Intuition Pumps and Other Tools for Thinking</td>
+      <td>Daniel C. Dennett</td>
+      <td>2014</td>
+      <td>2099-99-99</td>
+      <td>philosophy</td>
+    </tr>
+    <tr>
       <td>aa105</td>
       <td>Lessons</td>
       <td>Ian McEwan</td>
       <td>2022</td>
       <td>2099-99-99</td>
       <td>fiction</td>
-    </tr>
-    <tr>
-      <td>aa120</td>
-      <td>Being You: A New Science of Consciousness</td>
-      <td>Anil Seth</td>
-      <td>2021</td>
-      <td>2099-99-99</td>
-      <td>consciousness neuroscience</td>
     </tr>
     <tr>
       <td>aa097</td>
@@ -247,28 +255,36 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
-      <td>aa099</td>
-      <td>Intuition Pumps and Other Tools for Thinking</td>
-      <td>Daniel C. Dennett</td>
-      <td>2014</td>
-      <td>2099-99-99</td>
-      <td>philosophy</td>
+      <td>aa143</td>
+      <td>The Iliad</td>
+      <td>Homer, tr. Emily Wilson</td>
+      <td>2023</td>
+      <td>2025-99-99</td>
+      <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa101</td>
-      <td>God: The Most Unpleasant Character in All Fiction</td>
-      <td>Dan Barker</td>
-      <td>2016</td>
-      <td>2099-99-99</td>
-      <td>christianity religion bible</td>
-    </tr>
-    <tr>
-      <td>aa129</td>
-      <td>The Science of Can and Can't: A Physicist's Journey through the Land of Counterfactuals</td>
-      <td>Chiara Marletto</td>
+      <td>aa120</td>
+      <td>Being You: A New Science of Consciousness</td>
+      <td>Anil Seth</td>
       <td>2021</td>
       <td>2025-99-99</td>
-      <td>physics counterfactuals science</td>
+      <td>consciousness neuroscience</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa139.txt">aa139</a></td>
+      <td>The Genetic Book of the Dead: A Darwinian Reverie</td>
+      <td>Richard Dawkins</td>
+      <td>2024</td>
+      <td>2025-99-99</td>
+      <td>genetics evolutionary biology science</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa146.txt">aa146</a></td>
+      <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
+      <td>Frank Dikötter</td>
+      <td>2013</td>
+      <td>2025-99-99</td>
+      <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
       <td>aa107</td>
@@ -287,31 +303,15 @@
       <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
-      <td>aa143</td>
-      <td>The Iliad</td>
-      <td>Homer, tr. Emily Wilson</td>
-      <td>2023</td>
+      <td>aa129</td>
+      <td>The Science of Can and Can't: A Physicist's Journey through the Land of Counterfactuals</td>
+      <td>Chiara Marletto</td>
+      <td>2021</td>
       <td>2025-99-99</td>
-      <td>fiction greek mythology</td>
+      <td>physics counterfactuals science</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa146.txt">aa146</a></td>
-      <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
-      <td>Frank Dikötter</td>
-      <td>2013</td>
-      <td>2025-99-99</td>
-      <td>cultural revolution china mao communism</td>
-    </tr>
-    <tr>
-      <td><a href="https://jd2504.github.io/lego/aa139.txt">aa139</a></td>
-      <td>The Genetic Book of the Dead: A Darwinian Reverie</td>
-      <td>Richard Dawkins</td>
-      <td>2024</td>
-      <td>2025-99-99</td>
-      <td>genetics evolutionary biology science</td>
-    </tr>
-    <tr>
-      <td><a href="https://jd2504.github.io/lego/aa153.txt">aa153</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa153.html">aa153</a></td>
       <td>War</td>
       <td>Bob Woodward</td>
       <td>2024</td>
@@ -1437,6 +1437,14 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa155.html">aa155</a></td>
+      <td>Patient H.M.: A Story of Memory, Madness, and Family Secrets</td>
+      <td>Luke Dittrich</td>
+      <td>2017</td>
+      <td>NaN</td>
+      <td>2025-03-17</td>
     </tr>
   </tbody>
 </table>
