--- a/lego/read.html
+++ b/lego/read.html
@@ -311,6 +311,14 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
+      <td><a href="https://jd2504.github.io/lego/aa155.html">aa155</a></td>
+      <td>Patient H.M.: A Story of Memory, Madness, and Family Secrets</td>
+      <td>Luke Dittrich</td>
+      <td>2017</td>
+      <td>2025-03-17</td>
+      <td>neuroscience memoir amnesic lobotomy lobectomy memory</td>
+    </tr>
+    <tr>
       <td><a href="https://jd2504.github.io/lego/aa153.html">aa153</a></td>
       <td>War</td>
       <td>Bob Woodward</td>
@@ -1437,14 +1445,6 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
-    </tr>
-    <tr>
-      <td><a href="https://jd2504.github.io/lego/aa155.html">aa155</a></td>
-      <td>Patient H.M.: A Story of Memory, Madness, and Family Secrets</td>
-      <td>Luke Dittrich</td>
-      <td>2017</td>
-      <td>NaN</td>
-      <td>2025-03-17</td>
     </tr>
   </tbody>
 </table>
