--- a/lego/read.html
+++ b/lego/read.html
@@ -263,12 +263,12 @@
       <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa120</td>
-      <td>Being You: A New Science of Consciousness</td>
-      <td>Anil Seth</td>
-      <td>2021</td>
+      <td>aa157</td>
+      <td>Wired For Story</td>
+      <td>Lisa Cron</td>
+      <td>2017</td>
       <td>2025-99-99</td>
-      <td>consciousness neuroscience</td>
+      <td>writing cognitive science narrative</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa139.txt">aa139</a></td>
@@ -287,14 +287,6 @@
       <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
-      <td>aa107</td>
-      <td>A History of Christianity: The First Three Thousand Years</td>
-      <td>Diarmaid MacCulloch</td>
-      <td>2009</td>
-      <td>2025-99-99</td>
-      <td>christianity religion history catholicism judaism islam</td>
-    </tr>
-    <tr>
       <td>aa100</td>
       <td>The Alignment Problem</td>
       <td>Brian Christian</td>
@@ -303,12 +295,36 @@
       <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
+      <td>aa107</td>
+      <td>A History of Christianity: The First Three Thousand Years</td>
+      <td>Diarmaid MacCulloch</td>
+      <td>2009</td>
+      <td>2025-99-99</td>
+      <td>christianity religion history catholicism judaism islam</td>
+    </tr>
+    <tr>
       <td>aa129</td>
       <td>The Science of Can and Can't: A Physicist's Journey through the Land of Counterfactuals</td>
       <td>Chiara Marletto</td>
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa120</td>
+      <td>Being You: A New Science of Consciousness</td>
+      <td>Anil Seth</td>
+      <td>2021</td>
+      <td>2025-03-27</td>
+      <td>consciousness neuroscience</td>
+    </tr>
+    <tr>
+      <td>aa156</td>
+      <td>The Cockroach</td>
+      <td>Ian McEwan</td>
+      <td>2019</td>
+      <td>2025-03-26</td>
+      <td>satire brexit metamorphosis</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa155.html">aa155</a></td>
