--- a/lego/read.html
+++ b/lego/read.html
@@ -263,12 +263,12 @@
       <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa157</td>
-      <td>Wired For Story</td>
-      <td>Lisa Cron</td>
-      <td>2017</td>
+      <td>aa159</td>
+      <td>The Joy of X</td>
+      <td>Steven Strogatz</td>
+      <td>2019</td>
       <td>2025-99-99</td>
-      <td>writing cognitive science narrative</td>
+      <td>mathematics algebra calculus numbers</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa139.txt">aa139</a></td>
@@ -311,7 +311,15 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
-      <td>aa120</td>
+      <td>aa157</td>
+      <td>Wired For Story</td>
+      <td>Lisa Cron</td>
+      <td>2017</td>
+      <td>2025-04-01</td>
+      <td>writing cognitive science narrative</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa120.html">aa120</a></td>
       <td>Being You: A New Science of Consciousness</td>
       <td>Anil Seth</td>
       <td>2021</td>
@@ -319,7 +327,7 @@
       <td>consciousness neuroscience</td>
     </tr>
     <tr>
-      <td>aa156</td>
+      <td><a href="https://jd2504.github.io/lego/aa156.txt">aa156</a></td>
       <td>The Cockroach</td>
       <td>Ian McEwan</td>
       <td>2019</td>
@@ -1095,20 +1103,20 @@
       <td>artificial intelligence agi</td>
     </tr>
     <tr>
-      <td>aa045</td>
-      <td>The Rational Optimist</td>
-      <td>Matt Ridley</td>
-      <td>2010</td>
-      <td>2022-08-14</td>
-      <td>reason economics</td>
-    </tr>
-    <tr>
       <td>aa046</td>
       <td>Pnin</td>
       <td>Vladimir Nabokov</td>
       <td>1957</td>
       <td>2022-08-14</td>
       <td>fiction</td>
+    </tr>
+    <tr>
+      <td>aa045</td>
+      <td>The Rational Optimist</td>
+      <td>Matt Ridley</td>
+      <td>2010</td>
+      <td>2022-08-14</td>
+      <td>reason economics</td>
     </tr>
     <tr>
       <td>aa044</td>
@@ -1461,6 +1469,14 @@
       <td>2018</td>
       <td>2021-01-01</td>
       <td>running endurance sports psychology fitness biology</td>
+    </tr>
+    <tr>
+      <td>aa158</td>
+      <td>How Emotions are Made: The Secret Life of the Brain</td>
+      <td>Lisa Feldman Barrett</td>
+      <td>2017</td>
+      <td>NaN</td>
+      <td>2025-99-99</td>
     </tr>
   </tbody>
 </table>
