--- a/lego/read.html
+++ b/lego/read.html
@@ -279,7 +279,7 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa146.txt">aa146</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
       <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
       <td>Frank Dikötter</td>
       <td>2013</td>
