--- a/lego/read.html
+++ b/lego/read.html
@@ -311,7 +311,7 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa159.txt">aa159</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa159.html">aa159</a></td>
       <td>The Joy of X</td>
       <td>Steven Strogatz</td>
       <td>2019</td>
@@ -335,7 +335,7 @@
       <td>consciousness neuroscience</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa156.txt">aa156</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa156.html">aa156</a></td>
       <td>The Cockroach</td>
       <td>Ian McEwan</td>
       <td>2019</td>
