--- a/lego/read.html
+++ b/lego/read.html
@@ -263,12 +263,12 @@
       <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa160</td>
-      <td>Franklin & Washington: The Founding Partnership</td>
-      <td>Edward J. Larson</td>
-      <td>2020</td>
+      <td>aa161</td>
+      <td>A Book About Love</td>
+      <td>Jonah Lehrer</td>
+      <td>2016</td>
       <td>2025-99-99</td>
-      <td>american history revolution founding fathers</td>
+      <td>love neuroscience</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa139.txt">aa139</a></td>
@@ -309,6 +309,14 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa160.txt">aa160</a></td>
+      <td>Franklin & Washington: The Founding Partnership</td>
+      <td>Edward J. Larson</td>
+      <td>2020</td>
+      <td>2025-04-11</td>
+      <td>american history revolution founding fathers</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa159.html">aa159</a></td>
