--- a/lego/read.html
+++ b/lego/read.html
@@ -271,6 +271,14 @@
       <td>love neuroscience</td>
     </tr>
     <tr>
+      <td>aa162</td>
+      <td>The Consciousness Instinct</td>
+      <td>Michael S. Gazzaniga</td>
+      <td>2018</td>
+      <td>2025-99-99</td>
+      <td>neuroscience consciousness mind</td>
+    </tr>
+    <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
       <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
       <td>Frank Dikötter</td>
