--- a/lego/read.html
+++ b/lego/read.html
@@ -263,12 +263,12 @@
       <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa161</td>
-      <td>A Book About Love</td>
-      <td>Jonah Lehrer</td>
+      <td>aa166</td>
+      <td>Hillbilly Elegy</td>
+      <td>J. D. Vance</td>
       <td>2016</td>
       <td>2025-99-99</td>
-      <td>love neuroscience</td>
+      <td>memoir appalachia poverty</td>
     </tr>
     <tr>
       <td>aa162</td>
@@ -309,6 +309,38 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa165</td>
+      <td>The Abolition of Man</td>
+      <td>C. S. Lewis</td>
+      <td>1943</td>
+      <td>2025-04-30</td>
+      <td>christianity education morality</td>
+    </tr>
+    <tr>
+      <td>aa164</td>
+      <td>The Great Divorce</td>
+      <td>C. S. Lewis</td>
+      <td>1945</td>
+      <td>2025-04-29</td>
+      <td>christianity hell heaven fiction</td>
+    </tr>
+    <tr>
+      <td>aa163</td>
+      <td>The Shallows</td>
+      <td>Nicholas Carr</td>
+      <td>2010</td>
+      <td>2025-04-26</td>
+      <td>internet neuroscience</td>
+    </tr>
+    <tr>
+      <td>aa161</td>
+      <td>A Book About Love</td>
+      <td>Jonah Lehrer</td>
+      <td>2016</td>
+      <td>2025-04-23</td>
+      <td>love neuroscience</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa139.txt">aa139</a></td>
@@ -1127,20 +1159,20 @@
       <td>artificial intelligence agi</td>
     </tr>
     <tr>
-      <td>aa046</td>
-      <td>Pnin</td>
-      <td>Vladimir Nabokov</td>
-      <td>1957</td>
-      <td>2022-08-14</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
       <td>aa045</td>
       <td>The Rational Optimist</td>
       <td>Matt Ridley</td>
       <td>2010</td>
       <td>2022-08-14</td>
       <td>reason economics</td>
+    </tr>
+    <tr>
+      <td>aa046</td>
+      <td>Pnin</td>
+      <td>Vladimir Nabokov</td>
+      <td>1957</td>
+      <td>2022-08-14</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td>aa044</td>
