--- a/lego/read.html
+++ b/lego/read.html
@@ -328,7 +328,7 @@
     </tr>
     <tr>
       <td>aa163</td>
-      <td>The Shallows</td>
+      <td>The Shallows: What the Internet is Doing to Our Brains</td>
       <td>Nicholas Carr</td>
       <td>2010</td>
       <td>2025-04-26</td>
@@ -351,7 +351,7 @@
       <td>genetics evolutionary biology science</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa160.txt">aa160</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa160.html">aa160</a></td>
       <td>Franklin & Washington: The Founding Partnership</td>
       <td>Edward J. Larson</td>
       <td>2020</td>
