--- a/lego/read.html
+++ b/lego/read.html
@@ -247,6 +247,14 @@
       <td>consciousness philosophy</td>
     </tr>
     <tr>
+      <td>aa107</td>
+      <td>A History of Christianity: The First Three Thousand Years</td>
+      <td>Diarmaid MacCulloch</td>
+      <td>2009</td>
+      <td>2099-99-99</td>
+      <td>christianity religion history catholicism judaism islam</td>
+    </tr>
+    <tr>
       <td>aa137</td>
       <td>The Mind Doesn't Work That Way: The Scope and Limits of Computational Psychology</td>
       <td>Jerry A. Fodor</td>
@@ -255,28 +263,20 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
-      <td>aa143</td>
-      <td>The Iliad</td>
-      <td>Homer, tr. Emily Wilson</td>
-      <td>2023</td>
-      <td>2025-99-99</td>
-      <td>fiction greek mythology</td>
-    </tr>
-    <tr>
-      <td>aa166</td>
-      <td>Hillbilly Elegy</td>
-      <td>J. D. Vance</td>
-      <td>2016</td>
-      <td>2025-99-99</td>
-      <td>memoir appalachia poverty</td>
-    </tr>
-    <tr>
       <td>aa162</td>
       <td>The Consciousness Instinct</td>
       <td>Michael S. Gazzaniga</td>
       <td>2018</td>
       <td>2025-99-99</td>
       <td>neuroscience consciousness mind</td>
+    </tr>
+    <tr>
+      <td>aa167</td>
+      <td>Until The End of Time</td>
+      <td>Brian Greene</td>
+      <td>2020</td>
+      <td>2025-99-99</td>
+      <td>cosmology astrophysics life consciousness</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
@@ -295,12 +295,12 @@
       <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
-      <td>aa107</td>
-      <td>A History of Christianity: The First Three Thousand Years</td>
-      <td>Diarmaid MacCulloch</td>
-      <td>2009</td>
+      <td>aa143</td>
+      <td>The Iliad</td>
+      <td>Homer, tr. Emily Wilson</td>
+      <td>2023</td>
       <td>2025-99-99</td>
-      <td>christianity religion history catholicism judaism islam</td>
+      <td>fiction greek mythology</td>
     </tr>
     <tr>
       <td>aa129</td>
@@ -309,6 +309,14 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa166.html">aa166</a></td>
+      <td>Hillbilly Elegy</td>
+      <td>J. D. Vance</td>
+      <td>2016</td>
+      <td>2025-05-06</td>
+      <td>memoir appalachia poverty</td>
     </tr>
     <tr>
       <td>aa165</td>
@@ -1159,20 +1167,20 @@
       <td>artificial intelligence agi</td>
     </tr>
     <tr>
-      <td>aa045</td>
-      <td>The Rational Optimist</td>
-      <td>Matt Ridley</td>
-      <td>2010</td>
-      <td>2022-08-14</td>
-      <td>reason economics</td>
-    </tr>
-    <tr>
       <td>aa046</td>
       <td>Pnin</td>
       <td>Vladimir Nabokov</td>
       <td>1957</td>
       <td>2022-08-14</td>
       <td>fiction</td>
+    </tr>
+    <tr>
+      <td>aa045</td>
+      <td>The Rational Optimist</td>
+      <td>Matt Ridley</td>
+      <td>2010</td>
+      <td>2022-08-14</td>
+      <td>reason economics</td>
     </tr>
     <tr>
       <td>aa044</td>
