--- a/lego/read.html
+++ b/lego/read.html
@@ -271,12 +271,12 @@
       <td>neuroscience consciousness mind</td>
     </tr>
     <tr>
-      <td>aa167</td>
-      <td>Until The End of Time</td>
-      <td>Brian Greene</td>
-      <td>2020</td>
+      <td>aa169</td>
+      <td>The Tell-Tale Brain</td>
+      <td>V. S. Ramachandran</td>
+      <td>2011</td>
       <td>2025-99-99</td>
-      <td>cosmology astrophysics life consciousness</td>
+      <td>neuroscience psychology</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
@@ -309,6 +309,22 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa168</td>
+      <td>China After Mao</td>
+      <td>Frank Dikötter</td>
+      <td>2022</td>
+      <td>2025-05-20</td>
+      <td>china communism socialism mao deng xiaoping xi jinping</td>
+    </tr>
+    <tr>
+      <td>aa167</td>
+      <td>Until The End of Time</td>
+      <td>Brian Greene</td>
+      <td>2020</td>
+      <td>2025-05-14</td>
+      <td>cosmology astrophysics life consciousness</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa166.html">aa166</a></td>
