--- a/lego/read.html
+++ b/lego/read.html
@@ -263,20 +263,12 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
-      <td>aa162</td>
-      <td>The Consciousness Instinct</td>
-      <td>Michael S. Gazzaniga</td>
-      <td>2018</td>
+      <td>aa143</td>
+      <td>The Iliad</td>
+      <td>Homer, tr. Emily Wilson</td>
+      <td>2023</td>
       <td>2025-99-99</td>
-      <td>neuroscience consciousness mind</td>
-    </tr>
-    <tr>
-      <td>aa169</td>
-      <td>The Tell-Tale Brain</td>
-      <td>V. S. Ramachandran</td>
-      <td>2011</td>
-      <td>2025-99-99</td>
-      <td>neuroscience psychology</td>
+      <td>fiction greek mythology</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
@@ -287,6 +279,14 @@
       <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
+      <td>aa162</td>
+      <td>The Consciousness Instinct</td>
+      <td>Michael S. Gazzaniga</td>
+      <td>2018</td>
+      <td>2025-99-99</td>
+      <td>neuroscience consciousness mind</td>
+    </tr>
+    <tr>
       <td>aa100</td>
       <td>The Alignment Problem</td>
       <td>Brian Christian</td>
@@ -295,20 +295,28 @@
       <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
-      <td>aa143</td>
-      <td>The Iliad</td>
-      <td>Homer, tr. Emily Wilson</td>
-      <td>2023</td>
-      <td>2025-99-99</td>
-      <td>fiction greek mythology</td>
-    </tr>
-    <tr>
       <td>aa129</td>
       <td>The Science of Can and Can't: A Physicist's Journey through the Land of Counterfactuals</td>
       <td>Chiara Marletto</td>
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa170.txt">aa170</a></td>
+      <td>The Subtle Art of Not Giving a Fuck</td>
+      <td>2016</td>
+      <td>Mark Manson</td>
+      <td>2025-06-02</td>
+      <td>philosophy self help</td>
+    </tr>
+    <tr>
+      <td>aa169</td>
+      <td>The Tell-Tale Brain</td>
+      <td>V. S. Ramachandran</td>
+      <td>2011</td>
+      <td>2025-05-30</td>
+      <td>neuroscience psychology</td>
     </tr>
     <tr>
       <td>aa168</td>
